Bug 186564 - "Stop Playing After This Track" does not work
Summary: "Stop Playing After This Track" does not work
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (show other bugs)
Version: 2.1-SVN
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-08 17:07 UTC by missive
Modified: 2009-04-30 22:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description missive 2009-03-08 17:07:04 UTC
Version:           2.0-SVN (using 4.2.65 (KDE 4.2.65 (KDE 4.3 >= 20090226)), compiled sources)
Compiler:          gcc
OS:                Linux (i686) release 2.6.27-7-generic

When using "Stop Playing After This Track" the music stops, but the Play/Pause button does not change from Pause (the two vertical lines) to Play (the right-facing triangle).
Comment 1 Mark Kretschmann 2009-03-09 08:00:20 UTC
Can anyone confirm this? Who added this feature?
Comment 2 Mark Kretschmann 2009-04-18 19:24:30 UTC
I can confirm this with latest SVN trunk.

In fact the feature doesn't work at all - It just keeps on playing.
Comment 3 missive 2009-04-18 22:00:04 UTC
Bug 185888 is related. Possibly a duplicate?
Comment 4 Leo Franchi 2009-04-27 22:19:03 UTC
SVN commit 960047 by lfranchi:

fix stop after track
~lart sebr

BUG: 186564

 M  +1 -1      PrettyListView.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=960047
Comment 5 missive 2009-04-30 22:40:26 UTC
I've built r960990 but I still see the same problem.

I do see Stop After Track working again, and also the new indicator
for when Stop After Track is active, but ...

after the track stops (that part of the feature works great)

the Play/Pause button still shows Pause.