fix stop after track ~lart sebr

BUG: 186564

svn path=/trunk/extragear/multimedia/amarok/; revision=960047